--- a/Source/BrowseTheWeb/BrowseTheWeb.csproj
+++ b/Source/BrowseTheWeb/BrowseTheWeb.csproj
@@ -83,6 +83,12 @@
     <Compile Include="GUIPlugin.cs" />
     <Compile Include="HtmlInputType.cs" />
     <Compile Include="HtmlLinkNumber.cs" />
+    <Compile Include="Mouse.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Mouse.Designer.cs">
+      <DependentUpon>Mouse.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyLog.cs" />
     <Compile Include="OSD_LinkId.cs">
       <SubType>UserControl</SubType>
@@ -134,9 +140,14 @@
   <ItemGroup>
     <None Include="res\edit-icon.png" />
     <Content Include="res\fav-b-icon.png" />
+    <None Include="res\icon-48x48-mouse.png" />
     <Content Include="todo.txt" />
     <EmbeddedResource Include="GetThumb.resx">
       <DependentUpon>GetThumb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mouse.resx">
+      <DependentUpon>Mouse.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="OSD_LinkId.resx">
       <DependentUpon>OSD_LinkId.cs</DependentUpon>
