--- a/Source/Skybound.Gecko/Skybound.Gecko.csproj
+++ b/Source/Skybound.Gecko/Skybound.Gecko.csproj
@@ -52,7 +52,7 @@
     <DocumentationFile>bin\Debug\Skybound.Gecko.xml</DocumentationFile>
     <WarningLevel>3</WarningLevel>
     <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
