--- a/Source/BrowseTheWeb/BrowseTheWeb.csproj
+++ b/Source/BrowseTheWeb/BrowseTheWeb.csproj
@@ -145,6 +145,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="Setup.cs">
       <SubType>Form</SubType>
     </Compile>
